# tups-backend

./: Dockerfile  config  start
tups/: Makefile.am  config.h.in  config.sample  configure.ac
tups/data/: config.sample
tups/m4/: ax_cxx_check_lib.m4
tups/src/: BeanstalkClient.cpp  BeanstalkClient.h  BeanstalkJudge.cpp  BeanstalkJudge.h  BeanstalkSim.cpp  BeanstalkSim.h  backend.cpp  backendDebug.cpp  backendJudge.cpp  backendSim.cpp  clearQueue.cpp  compile.cpp  compile.h  config.cpp  config.h  debug.cpp  debug.h  java.policy  judge.cpp  judge.h  sim.cpp  sim.h
tups/src/odb/: compile-odb.cxx  compile-odb.hxx  compile-odb.ixx  compile.hxx  compile_info-odb.cxx  compile_info-odb.hxx  compile_info-odb.ixx  compile_info.hxx  debug-odb.cxx  debug-odb.hxx  debug-odb.ixx  debug.hxx  diff_option-odb.cxx  diff_option-odb.hxx  diff_option-odb.ixx  diff_option.hxx  diff_result-odb.cxx  diff_result-odb.hxx  diff_result-odb.ixx  diff_result.hxx  problem-odb.cxx  problem-odb.hxx  problem-odb.ixx  problem.hxx  sim_result-odb.cxx  sim_result-odb.hxx  sim_result-odb.ixx  sim_result.hxx  solution-odb.cxx  solution-odb.hxx  solution-odb.ixx  solution.hxx  source_code-odb.cxx  source_code-odb.hxx  source_code-odb.ixx  source_code.hxx  test_case-odb.cxx  test_case-odb.hxx  test_case-odb.ixx  test_case.hxx
tups/src/sandbox/: sandbox.c
